<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cosmos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="connection">Connection</string>
    <string name="vibration">Vibration</string>
    
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    
    <string name="v_off">Off</string>
    <string name="v_low">Low</string>
    <string name="v_high">High</string>

    <string name="dialog_title">Select your GWatch</string>
    
</resources>
