<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayoutConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundrect"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/connection"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/Connect"
                    android:layout_height="wrap_content"
					android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/connect" />

                <Button
                    android:id="@+id/Disconnect"
                    android:layout_height="wrap_content"
					android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/disconnect" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutVibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundrect"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Vibration"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/vibration"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/vOff"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/v_off" />

                <RadioButton
                    android:id="@+id/vLow"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/v_low" />

                <RadioButton
                    android:id="@+id/vHigh"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/v_high" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

</ScrollView>